style: format the code

--- a/data_handler/templates/data_handler/inc/run_model_dialog.html
+++ b/data_handler/templates/data_handler/inc/run_model_dialog.html
@@ -81,8 +81,8 @@
 
                     </div>
                     <!-- Start Alert Run complete -->
-                    <div class="alert alert-custom alert-light-success fade show mb-5 mt-2" style="display: none;" id='dhRunModelAlert'
-                        role="alert">
+                    <div class="alert alert-custom alert-light-success fade show mb-5 mt-2" style="display: none;"
+                        id='dhRunModelAlert' role="alert">
                         <div class="alert-icon">
                             <i class="flaticon2-check-mark"></i>
                         </div>
