--- a/members_app/templates/members_app/profile/run_history.html
+++ b/members_app/templates/members_app/profile/run_history.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block title %}
-Run Model History
+All Sessions
 {% endblock title %}
 
 {% block pagename %}
-Run Model History
+All sessions you run
 {% endblock pagename %}
 
 {% block content %}
@@ -25,7 +25,8 @@ Run Model History
         <h3 class="card-label font-weight-bolder text-dark">Model Run History</h3>
       </div>
       <div class="card-toolbar">
-        <form action="{% url 'data-handler-user-delete-session-history' %}" method='POST' class="deleteSessionHistoryForm" data-is-all-form="1">
+        <form action="{% url 'data-handler-user-delete-session-history' %}" method='POST'
+          class="deleteSessionHistoryForm" data-is-all-form="1">
           {% csrf_token %}
           <input type="hidden" name="is-all" value="1" />
           <button type="submit" data-toggle="tooltip" title="Delete All Sessions!, be careful"
@@ -82,7 +83,8 @@ Run Model History
                     <i class="la la-file-csv"></i>
                   </a>
                   &nbsp;
-                  <form method="POST" class="d-inline deleteSessionHistoryForm" data-is-all-form="0" action="{% url 'data-handler-user-delete-session-history' %}">
+                  <form method="POST" class="d-inline deleteSessionHistoryForm" data-is-all-form="0"
+                    action="{% url 'data-handler-user-delete-session-history' %}">
                     {% csrf_token %}
                     <input type="hidden" name='session_id' value="{{ his.session_id.pk }}" />
                     <button type="submit" class="btn btn-danger btn-sm" data-toggle='tooltip' title="Delete Session!!">
