fix: fix label text

--- a/data_handler/templates/data_handler/segments/extra_records_or_upgrade_sub_modal.html
+++ b/data_handler/templates/data_handler/segments/extra_records_or_upgrade_sub_modal.html
@@ -19,7 +19,7 @@
 
         <div class="form-3-box pt-0">
           <fieldset class="form-group p-0">
-            <legend class="w-auto px-2 text-secondary">Option 1</legend>
+            <legend class="w-auto px-2 text-secondary">Option 1: Upgrade Membership</legend>
             <!--begin::Portlet-->
             <section id="askPayUpgradeSection">
 
