--- a/data_handler/templates/data_handler/inc/stripe_checkout_form.html
+++ b/data_handler/templates/data_handler/inc/stripe_checkout_form.html
@@ -75,8 +75,11 @@
 
                     </div>
                     <div class="col text-right">
-                        <span class="form-text text-muted mt-2"><b>* Will send an invoice of transaction to your
-                                email</b></span>
+                        <span class="form-text text-muted mt-2">
+                            <b>
+                            * Transaction details will be sent to your email
+                            </b>
+                            </span>
                     </div>
                 </div>
             </div>
