--- a/members_app/templates/members_app/inc/profile_left_side.html
+++ b/members_app/templates/members_app/inc/profile_left_side.html
@@ -102,7 +102,7 @@
                     <!--end::Svg Icon-->
                   </span>
                 </span>
-                <span class="navi-text font-size-lg">Model Dashboard</span>
+                <span class="navi-text font-size-lg">Prediction Dashboard</span>
               </a>
               {% else %}
               <a href="javascript:void()" class="navi-link py-4 not-allowed-cursor disabled" tabindex="-1" aria-disabled="true"
@@ -124,7 +124,7 @@
                     <!--end::Svg Icon-->
                   </span>
                 </span>
-                <span class="navi-text font-size-lg">Model Dashboard</span>
+                <span class="navi-text font-size-lg">Prediction Dashboard</span>
               </a>
               {% endif %}
               
@@ -202,7 +202,7 @@
                     </svg>
                     <!--end::Svg Icon--></span>
                 </span>
-                <span class="navi-text font-size-lg">Communictaion</span>
+                <span class="navi-text font-size-lg">Communication</span>
 
 
               </a>
