fix: add styles for table

--- a/members_app/templates/members_app/profile/account_settings.html
+++ b/members_app/templates/members_app/profile/account_settings.html
@@ -12,7 +12,12 @@ Account Settings
     type="text/css" />
 <link rel="stylesheet" href="{% static 'assets/css/stripe-checkout.css' %}" type="text/css" />
 <link rel="stylesheet" href="{% static 'assets/css/stripe_upgrade_membership_modal.css' %}" type="text/css" />
-
+<style>
+    #upgradeMembershipTable tbody td{
+        
+        vertical-align: middle;
+    }
+</style>
 {% endblock customcss %}
 
 {% block pagename %}
