fix: fix the layouts

--- a/members_app/templates/members_app/profile/overview.html
+++ b/members_app/templates/members_app/profile/overview.html
@@ -379,7 +379,7 @@ Profile Overview
                 </div> -->
               </div>
               <!--end::Header-->
-              {% if get_user_membership_only == "starter" %}
+              {% if get_user_membership_only == "starter" or get_user_membership_only == 'unlimited_development' %}
               <!--begin::Body-->
               <div class="card-body p-0">
                 <!--begin::Item-->
