fix: add javascript files

--- a/users/templates/users/inc/master.html
+++ b/users/templates/users/inc/master.html
@@ -146,6 +146,8 @@
     <script src="{% static 'assets/plugins/global/plugins.bundle.js' %}"></script>
     <script src="{% static 'assets/plugins/custom/prismjs/prismjs.bundle.js' %}"></script>
     <script src="{% static 'assets/js/scripts.bundle.js' %}"></script>
+    <script src="{% static 'assets/js/custom/general/helpers.js' %}"></script>
+	<script src="{% static 'assets/js/custom/general/utils.js' %}"></script>
     <!--end::Global Theme Bundle-->
     <!--begin::Page Scripts(used by this page)-->
     <script src="{% static 'assets/js/pages/custom/login/login-general.js' %}"></script>
