--- a/predict_me/templates/predict_me/inc/master.html
+++ b/predict_me/templates/predict_me/inc/master.html
@@ -223,7 +223,8 @@
     <!--begin::Page Scripts(used by this page)-->
     <script src="{% static 'assets/js/pages/widgets.js' %}"></script>
     <script src="{% static 'assets/js/axios.min.js' %}" type="text/javascript"></script>
-
+    <script src="{% static 'assets/js/custom/general/helpers.js' %}"></script>
+	<script src="{% static 'assets/js/custom/general/utils.js' %}"></script>
     <script>
         $(document).ready(function () {
             // Autosize the textarea
